--- a/index.html
+++ b/index.html
@@ -135,13 +135,11 @@
                 <h6>DISCOVER THE ARCHIVES</h6>
             </div>
             <div id="t2">
-                <h4>I'M A 24YO FRENCH DEVELOPER FRESHLY GRADUATED<br> FROM GOBELINS PARIS. I'M CURRENTLY WORKING AT<br>
-                    IMMERSIVE GARDEN. PREVIOUSLY TRAINEE AT PUREE<br> MAISON AND INTERN AT SUPERHERO CHEESECAKE. HIT<br>
-                    ME UP FOR INTERESTING COLLABORATIONS</h4>
+                <h4>I AM A 16 YEARS OLD BELARUSIAN DEVELOPER. I AM CURRENTLY <br>WORKING ON CREATING A ROBOT LIKE YANDEX ROVER. I ALSO <br>WORK IN 3 MINECRAFT HOSTINGS. IF YOU NEED HELP, PLEASE <br>CONTACT US!</h4>
                 <div id="contact">
                     <a href="https://github.com/Nitishkumar22">GITHUB<i class="ri-arrow-right-up-line"></i></a>
-                    <a href="https://www.instagram.com/_nitish_kumar_10/">INSTAGRAM<i class="ri-arrow-right-up-line"></i></a>
-                    <a href="https://www.linkedin.com/in/nitish-kumar-65531822b/">LINKEDIN <i class="ri-arrow-right-up-line"></i></a>
+                    <a href="https://www.instagram.com/_nitish_kumar_10/">DISCORD<i class="ri-arrow-right-up-line"></i></a>
+                    <a href="https://www.linkedin.com/in/nitish-kumar-65531822b/">MY HOSTING<i class="ri-arrow-right-up-line"></i></a>
                 </div>
             </div>
             <div id="nav">
@@ -150,16 +148,16 @@
                     <i class="ri-arrow-up-line"></i>
                 </div>
                 <div class="part2">
-                    <h3>© PM-Kirill | Все права защищены.</h3>
-                    <h4>ALL RIGHTS RESERVED</h4>
+                    <h3>© PM-Kirill</h3>
+                    <h4>Все права защищены.</h4>
                 </div>
                 <div class="part2">
-                    <h3>3D BY LUC MIRAMONT</h3>
-                    <h4>SOUND BY RATSIMEFFECT</h4>
+                    <h3>DEVELOPMENT BY</h3>
+                    <h4>PM-Kirill</h4>
                 </div>
                 <div class="part2">
                     <h3>DESIGNED BY</h3>
-                    <h4>MARTIJN VAN MEIJEL</h4>
+                    <h4>PM-Kirill</h4>
                 </div>
             </div>
         </div>
