--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 <body>
     <div id="main">
         <div id="page1">
-            <h1>PM-Kirill</h1>
+            <h1>PM-KIRILL</h1>
             <h1>CREATIVE</h1>
             <h1>DEV.</h1>
             <div id="line"></div>
         </div>
         <div id="page2">
-            <h1>PM-Kirill</h1>
+            <h1>PM-KIRILL</h1>
             <h1>CREATIVE</h1>
             <h1>DEV.</h1>
         </div>
         <div id="top">
             <div id="right">
-                <h1>PM-Kirill</h1>
+                <h1>PM-KIRILL</h1>
                 <h1>CREATIVE</h1>
                 <h1>DEV.</h1>
             </div>
