--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <h6>DISCOVER THE ARCHIVES</h6>
             </div>
             <div id="t2">
-                <h4>I AM A 16 YEARS OLD BELARUSIAN DEVELOPER. I AM CURRENTLY <br>WORKING ON CREATING A ROBOT LIKE YANDEX ROVER. I ALSO <br>WORK IN 3 MINECRAFT HOSTINGS. IF YOU NEED HELP, PLEASE <br>CONTACT US!</h4>
+                <h4>I AM A BELARUSIAN DEVELOPER. I AM CURRENTLY <br>WORKING ON CREATING A ROBOT LIKE YANDEX ROVER. I ALSO <br>WORK IN 3 MINECRAFT HOSTINGS. IF YOU NEED HELP, PLEASE <br>CONTACT US!</h4>
                 <div id="contact">
                     <a href="https://github.com/Nitishkumar22">GITHUB<i class="ri-arrow-right-up-line"></i></a>
                     <a href="https://www.instagram.com/_nitish_kumar_10/">DISCORD<i class="ri-arrow-right-up-line"></i></a>
