--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <div id="page1">
             <h1>PM-KIRILL</h1>
             <h1>CREATIVE</h1>
-            <h1>DEV.</h1>
+            <h1>DEV</h1>
             <div id="line"></div>
         </div>
         <div id="page2">
             <h1>PM-KIRILL</h1>
             <h1>CREATIVE</h1>
-            <h1>DEV.</h1>
+            <h1>DEV</h1>
         </div>
         <div id="top">
             <div id="right">
                 <h1>PM-KIRILL</h1>
                 <h1>CREATIVE</h1>
-                <h1>DEV.</h1>
+                <h1>DEV</h1>
             </div>
             <div id="left">
                 <h1>PROJECTS</h1>
@@ -57,11 +57,11 @@
                 <div class="one">
                     <div class="two">
                         <div class="image"><img
-                                src="https://images.unsplash.com/photo-1534008757030-27299c4371b6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
+                                src="https://discord.com/channels/@me/1100371167614869595/1119520971964039248"
                                 alt=""></div>
-                        <h1>GLEEC</h1>
+                        <h1>MY WEB SITE</h1>
                     </div>
-                    <h5>EXPERIENCE<br>/2022</h5>
+                    <h5>CREATING<br>/2023</h5>
                     <i class="ri-arrow-right-down-line"></i>
                 </div>
                 <div class="one">
