--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="one">
                     <div class="two">
                         <div class="image"><img
-                                src="https://discord.com/channels/@me/1100371167614869595/1119520971964039248"
+                                src="https://cdn.discordapp.com/attachments/1100371167614869595/1119520971699785808/image.png"
                                 alt=""></div>
                         <h1>MY WEB SITE</h1>
                     </div>
