--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div id="t2">
                 <h4>I AM A BELARUSIAN DEVELOPER. I AM CURRENTLY <br>WORKING ON CREATING A ROBOT LIKE YANDEX ROVER. I ALSO <br>WORK IN 3 MINECRAFT HOSTINGS. IF YOU NEED HELP, PLEASE <br>CONTACT US!</h4>
                 <div id="contact">
-                    <a href="https://github.com/Nitishkumar22">GITHUB<i class="ri-arrow-right-up-line"></i></a>
+                    <a href="https://github.com/PM-KIRILL">GITHUB<i class="ri-arrow-right-up-line"></i></a>
                     <a href="https://www.instagram.com/_nitish_kumar_10/">DISCORD<i class="ri-arrow-right-up-line"></i></a>
                     <a href="https://www.linkedin.com/in/nitish-kumar-65531822b/">MY HOSTING<i class="ri-arrow-right-up-line"></i></a>
                 </div>
