--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <h4>I AM A BELARUSIAN DEVELOPER. I AM CURRENTLY <br>WORKING ON CREATING A ROBOT LIKE YANDEX ROVER. I ALSO <br>WORK IN 3 MINECRAFT HOSTINGS. IF YOU NEED HELP, PLEASE <br>CONTACT US!</h4>
                 <div id="contact">
                     <a href="https://github.com/PM-KIRILL">GITHUB<i class="ri-arrow-right-up-line"></i></a>
-                    <a href="https://www.instagram.com/_nitish_kumar_10/">DISCORD<i class="ri-arrow-right-up-line"></i></a>
+                    <a href="https://discordapp.com/users/1081189420780240917/">DISCORD<i class="ri-arrow-right-up-line"></i></a>
                     <a href="https://www.linkedin.com/in/nitish-kumar-65531822b/">MY HOSTING<i class="ri-arrow-right-up-line"></i></a>
                 </div>
             </div>
@@ -148,16 +148,16 @@
                     <i class="ri-arrow-up-line"></i>
                 </div>
                 <div class="part2">
-                    <h3>© PM-Kirill</h3>
+                    <h3>© PM-KIRILL</h3>
                     <h4>Все права защищены.</h4>
                 </div>
                 <div class="part2">
                     <h3>DEVELOPMENT BY</h3>
-                    <h4>PM-Kirill</h4>
+                    <h4>PM-KIRILL</h4>
                 </div>
                 <div class="part2">
                     <h3>DESIGNED BY</h3>
-                    <h4>PM-Kirill</h4>
+                    <h4>PM-KIRILL</h4>
                 </div>
             </div>
         </div>
