--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                 <div class="one">
                     <div class="two">
                         <div class="image"><img
-                                src="https://images.unsplash.com/photo-1610276198568-eb6d0ff53e48?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1780&q=80"
+                                src="https://github.com/i-mnotarobot/EmPather/raw/master/logo.JPG"
                                 alt=""></div>
-                        <h1>MIDWAM</h1>
+                        <h1>EmPather</h1>
                     </div>
                     <h5>CREATED IN<br>/2022</h5>
                     <i class="ri-arrow-right-down-line"></i>
