--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="one">
                     <div class="two">
                         <div class="image"><img
-                                src="https://github.com/i-mnotarobot/EmPather/raw/master/logo.JPG"
+                                src="https://raw.githubusercontent.com/i-mnotarobot/EmPather/master/logo.JPG?token=GHSAT0AAAAAACDVXEZHS22DHTA3RQ5PGAECZENMARQ"
                                 alt=""></div>
                         <h1>EmPather</h1>
                     </div>
