--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                 <div class="one">
                     <div class="two">
                         <div class="image"><img
-                                src="https://images.unsplash.com/photo-1533110398145-9f8cef8e5ad4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1935&q=80"
+                                src="Ссылка"
                                 alt=""></div>
-                        <h1>ARTISANS <br> D'IDEES</h1>
+                        <h1>Sicret</h1>
                     </div>
                     <h5>CREATED IN<br>/2022</h5>
                     <i class="ri-arrow-right-down-line"></i>
@@ -87,9 +87,9 @@
                 <div class="one">
                     <div class="two">
                         <div class="image"><img
-                                src="https://images.unsplash.com/photo-1500917293891-ef795e70e1f6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
+                                src="Ссылка"
                                 alt=""></div>
-                        <h1>CHLOE NEGRE</h1>
+                        <h1>Sicret</h1>
                     </div>
                     <h5>CREATED IN<br>/2022</h5>
                     <i class="ri-arrow-right-down-line"></i>
@@ -97,9 +97,9 @@
                 <div class="one">
                     <div class="two">
                         <div class="image"><img
-                                src="https://images.unsplash.com/photo-1470259078422-826894b933aa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2074&q=80"
+                                src="Ссылка"
                                 alt=""></div>
-                        <h1>ELSA JOSEPH</h1>
+                        <h1>Sicret</h1>
                     </div>
                     <h5>CREATED IN<br>/2022</h5>
                     <i class="ri-arrow-right-down-line"></i>
@@ -107,9 +107,9 @@
                 <div class="one">
                     <div class="two">
                         <div class="image"><img
-                                src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
+                                src="Ссылка"
                                 alt=""></div>
-                        <h1>.RAW</h1>
+                        <h1>Sicret</h1>
                     </div>
                     <h5>CREATED IN<br>/2022</h5>
                     <i class="ri-arrow-right-down-line"></i>
@@ -117,9 +117,9 @@
                 <div class="one">
                     <div class="two">
                         <div class="image"><img
-                                src="https://images.unsplash.com/photo-1600069226367-412873fb0637?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
+                                src="Ссылка"
                                 alt=""></div>
-                        <h1>MR.L'AGENT</h1>
+                        <h1>Sicret</h1>
                     </div>
                     <h5>CREATED IN<br>/2022</h5>
                     <i class="ri-arrow-right-down-line"></i>
@@ -139,7 +139,7 @@
                 <div id="contact">
                     <a href="https://github.com/PM-KIRILL">GITHUB<i class="ri-arrow-right-up-line"></i></a>
                     <a href="https://discordapp.com/users/1081189420780240917/">DISCORD<i class="ri-arrow-right-up-line"></i></a>
-                    <a href="https://www.linkedin.com/in/nitish-kumar-65531822b/">MY HOSTING<i class="ri-arrow-right-up-line"></i></a>
+                    <a href="Ссылка">MY HOSTING<i class="ri-arrow-right-up-line"></i></a>
                 </div>
             </div>
             <div id="nav">
