--- a/Site/about/index.html
+++ b/Site/about/index.html
@@ -101,7 +101,7 @@ At the peak of activity, the ProstoMine server simultaneously held more than 60 
 
   <div class="bloc-contact appear link">
     <div id="black" class="name black move-up">work</div>
-    <div class="name white move-up">work</div>
+    <div class="name white move-up">/work</div>
   </div>
 
   <div id="email" class="layer e-mail appear"></div>
