--- a/Site/work/my-site.html
+++ b/Site/work/my-site.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="You can see my projects and little interactions here!">
-  <meta name="robots" content="index, follow" />
   <meta name="copyright" content="Léo Mouraire 2018">
-  <title>Léo Mouraire | Work - Some projects and interactions</title>
+  <title>Superhero Cheesecake - 3D Intern application in a creative studio</title>
   <link rel="icon" type="image/png" sizes="128x128" href="../images/favicon.png">
   <link rel="icon" type="image/png" sizes="64x64" href="../images/favicon64.png">
   <link rel="icon" type="image/png" sizes="38x38" href="../images/favicon38.png">
@@ -17,92 +15,120 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/app.css">
 </head>
-<body id="page-work" class="page-work">
-
+<body class="page-project">
   <div class="navbar appear">
-    <div class="brand"><span class="btn-brand link d-sm-none">To Main</span><span class="btn-brand link d-none d-sm-block">To Main</span></div>
+    <div class="brand"><span class="btn-brand link d-sm-none">LM</span><span class="btn-brand link d-none d-sm-block">Léo Mouraire</span></div>
     <div class="menu"><span id="btn-menu" class="btn-menu appear">Menu</span></div>
   </div>
 
-  <div class="bloc-titre">
-    <div class="move-up-container container-elt-titre">
-      <div class="elt-titre move-up-slow">Work</div>
-    </div>
-    <!-- <div class="move-up-container container-elt-titre titre-clone">
-      <div class="elt-titre move-up-slow">Work</div>
-    </div>
-    <div class="move-up-container container-elt-titre titre-clone">
-      <div class="elt-titre move-up-slow">Work</div>
-    </div>
-    <div class="move-up-container container-elt-titre titre-clone">
-      <div class="elt-titre move-up-slow">Work</div>
-    </div>
-    <div class="move-up-container container-elt-titre titre-clone">
-      <div class="elt-titre move-up-slow">Work</div>
-    </div>
-    <div class="move-up-container container-elt-titre titre-clone">
-      <div class="elt-titre move-up-slow">Work</div>
-    </div>
-    <div class="move-up-container container-elt-titre titre-clone">
-      <div class="elt-titre move-up-slow">Work</div>
-    </div>
-    <div class="move-up-container container-elt-titre titre-clone">
-      <div class="elt-titre move-up-slow">Work</div>
-    </div>
-    <div class="move-up-container container-elt-titre titre-clone">
-      <div class="elt-titre move-up-slow">Work</div>
-    </div>
-    <div class="move-up-container container-elt-titre titre-clone">
-      <div class="elt-titre move-up-slow">Work</div>
-    </div> -->
-  </div>
-
-  <div id="email" class="layer e-mail appear">pm.mail.kirill2546@gmail.com</div>
-
-  <div class="bloc-work row appear">
-    <div class=" col-work col-lg-6 col-md-8 col-10">
-      <div class="elt-work my-site">
-        <div class="bloc-work-description">
-          <span class="moving-title-work">Blabla</span>
-          <div class="title-work">
-            <h2 class="tags-title">My Site</h2>
-            <h3 class="tags">CSS-42.8%, HTML-29.7%, SCSS-23.5%, JavaScript-2.9%, PHP-1.1%</h3>
-            <h3 class="tags">Visual Studio Code</h3>
-            <h3 class="tags">Full development</h3>
+  <div class="head-container row">
+    <div class="col-md-10 col-12 project-box">
+      <div class="container-title move-up-container">
+        <h1 class="elt-title move-up">Superhero Cheesecake</h1>
+      </div>
+      <div class="container-text row">
+        <div class="elt-text col-6 col-lg-6 text-right appear-s">
+          <div class="title-text">
+            Skills
+          </div>
+          <h2 class="content-text">
+            ThreeJs, Blender,<br> Sound design
+          </h2>
+        </div>
+        <div class="d-none elt-text col-6 col-lg-6 text-left appear-s">
+          <div class="title-text">
+            Team
+          </div>
+          <div class="content-text">
+            None
           </div>
         </div>
-      </div>
-      <div class="elt-work empather">
-        <div class="bloc-work-description">
-          <span class="moving-title-work">Blabla</span>
-          <div class="title-work">
-            <h2 class="tags-title">EmPather</h2>
-            <h3 class="tags">Python</h3>
-            <h3 class="tags">Visual Studio Code</h3>
-            <h3 class="tags">assistance in development</h3>
+        <div class="d-none elt-text col-6 col-lg-6 text-right appear-s">
+          <div class="title-text">
+            Client
           </div>
+          <h2 class="content-text">
+            Me
+          </h2>
+        </div>
+        <div class="elt-text col-6 col-lg-6 text-left appear-s">
+          <div class="title-text">
+            Weakness
+          </div>
+          <h2 class="content-text">
+            Only for desktop,<br>
+            bad optimisation,<br>
+            bad UX
+          </h2>
         </div>
       </div>
-    <div class="bloc-contact appear link">
-      <div id="black" class="name black move-up">contact</div>
-      <div class="name white move-up">contact</div>
     </div>
   </div>
 
+  <div class="content-container row">
+    <div class="container-screenshot col-md-8 col-12">
+      <div class="elt-screenshot elt-link">
+        <a target="_blank" title="View website" href="https://superherocheesecake.leomouraire.com"><img src="../images/shcc-screen4.jpg" alt=""></a>
+      </div>
+    </div>
+    <div class="container-text col-md-8 col-12">
+      <div class="elt-text">
+        <h3>
+          In December 2018, I spot an internship offer from the famous award wining company! I decided to make it my first concern!
+          I developed an interactive 3D experience inspired by some of their work like <a href="https://dimetrap.com">Dime Trap</a> or  <a href="https://goplaces.theheinekencompany.com/en">Heineken Go Places</a>.
+          <br>
+          Turns out I got the internship!
+        </h3>
+        <a class="text-right" target="_blank" href="https://superherocheesecake.leomouraire.com">View website</a>
+      </div>
+    </div>
+    <div class="col-8">
+      <div class="row">
+        <div class="container-screenshot col-md-6 col-12">
+          <div class="elt-screenshot">
+            <img src="../images/shcc-screen1.jpg" alt="">
+          </div>
+        </div>
+        <div class="container-screenshot col-md-6 col-12">
+          <div class="elt-screenshot">
+            <img src="../images/shcc-screen5.jpg" alt="">
+          </div>
+        </div>
+        <div class="container-screenshot col-md-6 col-12">
+          <div class="elt-screenshot">
+            <img src="../images/shcc-screen3.jpg" alt="">
+          </div>
+        </div>
+        <div class="container-screenshot col-md-6 col-12">
+          <div class="elt-screenshot">
+            <img src="../images/shcc-screen2.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-links row">
+    <div class="col-6 d-none">
+      <div class="container-previous-apercu d-none">
+        <img src="../images/klein-screen5.jpg" alt="">
+      </div>
+      <div class="link-projet btn-previous text-right disable move-up">
+        Previous
+      </div>
+    </div>
+    <div class="col-6">
+      <div class="container-next-apercu">
+        <img src="../images/fanette-preview.jpg" alt="">
+      </div>
+      <div class="link-projet btn-next text-center move-up">
+        <a href="fanettebullat.html">Next</a>
+      </div>
+    </div>
+  </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
+  <div id="email" class="layer e-mail appear">l.mouraire@outlook.fr</div>
 
   <div id="page-menu" class="page-menu">
 
@@ -138,13 +164,6 @@
 
   </div>
 
-  <div id="anim-project" class="anim-project">
-
-    <div id="moving-title-project" class="moving-title-project">
-      Blablabla
-    </div>
-
-  </div>
 
 
 
@@ -169,9 +188,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
   <script src="../js/menu.js"></script>
   <script src="../js/main.js"></script>
-  <script src="../js/modules/anim-contact.js"></script>
+  <script src="../js/pages/about.js"></script>
   <script src="../js/pages/home.js"></script>
-  <script src="../js/pages/work.js"></script>
+  <script src="../js/pages/project.js"></script>
 
 </body>
 </html>
