--- a/Site/work/index.html
+++ b/Site/work/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="You can see my projects and little interactions here!">
+  <meta name="description" content="I am a creative interactive developer based in Gomel, Belarus, currently working with Arduino and creating Discord bots.">
   <meta name="robots" content="index, follow" />
   <meta name="copyright" content="Léo Mouraire 2018">
-  <title>Léo Mouraire | Work - Some projects and interactions</title>
+  <title>PM-Kirill | I am a creative interactive developer based in Gomel/Belarus, currently working with Arduino and creating Discord bots.</title>
   <link rel="icon" type="image/png" sizes="128x128" href="../images/favicon.png">
   <link rel="icon" type="image/png" sizes="64x64" href="../images/favicon64.png">
   <link rel="icon" type="image/png" sizes="38x38" href="../images/favicon38.png">
@@ -18,12 +18,10 @@
   <link rel="stylesheet" href="../css/app.css">
 </head>
 <body id="page-work" class="page-work">
-
   <div class="navbar appear">
     <div class="brand"><span class="btn-brand link d-sm-none">To Main</span><span class="btn-brand link d-none d-sm-block">To Main</span></div>
     <div class="menu"><span id="btn-menu" class="btn-menu appear">Menu</span></div>
   </div>
-
   <div class="bloc-titre">
     <div class="move-up-container container-elt-titre">
       <div class="elt-titre move-up-slow">Work</div>
@@ -56,64 +54,101 @@
       <div class="elt-titre move-up-slow">Work</div>
     </div> -->
   </div>
-
-  <div id="email" class="layer e-mail appear">pm.mail.kirill2546@gmail.com</div>
-
+  <div id="email" class="layer e-mail appear">pm.mail.Kirill2546@gmail.com</div>
   <div class="bloc-work row appear">
     <div class=" col-work col-lg-6 col-md-8 col-10">
-      <div class="elt-work my-site">
+      <div class="elt-work superherocheesecake">
         <div class="bloc-work-description">
           <span class="moving-title-work">Blabla</span>
           <div class="title-work">
-            <h2 class="tags-title">My Site</h2>
-            <h3 class="tags">CSS-42.8%, HTML-29.7%, SCSS-23.5%, JavaScript-2.9%, PHP-1.1%</h3>
+            <h2 class="tags-title">PM-Site</h2>
             <h3 class="tags">Visual Studio Code</h3>
+            <h3 class="tags">CSS-42.8%, HTML-29.7%, SCSS-23.5%, JavaScript-2.9%, PHP-1.1%</h3>
             <h3 class="tags">Full development</h3>
           </div>
         </div>
       </div>
-      <div class="elt-work empather">
+      <div class="elt-work fanettebullat">
         <div class="bloc-work-description">
           <span class="moving-title-work">Blabla</span>
           <div class="title-work">
-            <h2 class="tags-title">EmPather</h2>
-            <h3 class="tags">Python</h3>
-            <h3 class="tags">Visual Studio Code</h3>
-            <h3 class="tags">assistance in development</h3>
+            <h2 class="tags-title">Robot FR1</h2>
+            <h3 class="tags">not finished</h3>
+            <h3 class="tags">EmPather</h3>
+            <h3 class="tags"></h3>
           </div>
         </div>
       </div>
+      <div class="elt-work nike">
+        <div class="bloc-work-description">
+          <span class="moving-title-work">Blabla</span>
+          <div class="title-work">
+            <h2 class="tags-title">PM-Chat</h2>
+            <h3 class="tags">Full Developement</h3>
+            <h3 class="tags">Visual Studio Code</h3>
+            <h3 class="tags">Python</h3>
+            <h3 class="tags"></h3>
+          </div>
+        </div>
+      </div>
+      <div class="elt-work klein">
+        <div class="bloc-work-description">
+          <span class="moving-title-work">Blabla</span>
+          <div class="title-work">
+            <h2 class="tags-title">Secret</h2>
+            <h3 class="tags"></h3>
+            <h3 class="tags"></h3>
+            <h3 class="tags"></h3>
+          </div>
+        </div>
+      </div>
+      <div class="elt-work henri-mouraire">
+        <span class="moving-title-work">Blabla</span>
+        <div class="title-work">
+          <h2 class="tags-title">Secret</h2>
+          <h3 class="tags"></h3>
+          <h3 class="tags"></h3>
+        </div>
+      </div>
+      <div class="elt-work words-cascade">
+        <span class="moving-title-work">Blabla</span>
+        <div class="title-work">
+          <h2 class="tags-title">Secret</h2>
+          <h3 class="tags"></h3>
+          <h3 class="tags"></h3>
+        </div>
+      </div>
+      <div class="elt-work monologue-otis">
+        <span class="moving-title-work">Blabla</span>
+        <div class="title-work">
+          <h2 class="tags-title">Secret</h2>
+          <h3 class="tags"></h3>
+          <h3 class="tags"></h3>
+          <h3 class="tags"></h3>
+          <h3 class="tags"></h3>
+        </div>
+      </div>
+      <div class="elt-work word-reveal">
+        <span class="moving-title-work">Blabla</span>
+        <div class="title-work">
+          <h2 class="tags-title">Secret</h2>
+          <h3 class="tags"></h3>
+          <h3 class="tags"></h3>
+        </div>
+      </div>
+    </div>
     <div class="bloc-contact appear link">
       <div id="black" class="name black move-up">contact</div>
       <div class="name white move-up">contact</div>
     </div>
   </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   <div id="page-menu" class="page-menu">
-
     <div id="wave" class="wave"></div>
-
     <div class="bloc-menu">
       <div class="menu-item-container"><span class="menu-item about">about</span></div>
       <div class="menu-item-container"><span class="menu-item work">work</span></div>
       <div class="menu-item-container"><span class="menu-item contact">contact</span></div>
     </div>
-
     <div class="loading-menu row above">
       <div class="col-xl-3 col-lg-4 word-menu">ABOUT</div>
       <div class="col-xl-3 col-lg-4 word-menu">ABOUT</div>
@@ -124,7 +159,6 @@
       <div class="col-xl-3 col-lg-4 word-menu">ABOUT</div>
       <div class="col-xl-3 col-lg-4 word-menu">ABOUT</div>
     </div>
-
     <div class="loading-menu row behind">
       <div class="col-xl-3 col-lg-4 word-menu">ABOUT</div>
       <div class="col-xl-3 col-lg-4 word-menu">ABOUT</div>
@@ -135,20 +169,13 @@
       <div class="col-xl-3 col-lg-4 word-menu">ABOUT</div>
       <div class="col-xl-3 col-lg-4 word-menu">ABOUT</div>
     </div>
-
   </div>
-
   <div id="anim-project" class="anim-project">
 
     <div id="moving-title-project" class="moving-title-project">
       Blablabla
     </div>
-
   </div>
-
-
-
-
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131151753-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -172,6 +199,5 @@
   <script src="../js/modules/anim-contact.js"></script>
   <script src="../js/pages/home.js"></script>
   <script src="../js/pages/work.js"></script>
-
 </body>
 </html>
