--- a/Site/about/index.html
+++ b/Site/about/index.html
@@ -19,7 +19,7 @@
 </head>
 <body class="page-about">
   <div class="navbar appear">
-    <div class="brand"><span class="btn-brand link d-sm-none">PM</span><span class="btn-brand link d-none d-sm-block">To Main</span></div>
+    <div class="brand"><span class="btn-brand link d-sm-none">To Main</Main></span><span class="btn-brand link d-none d-sm-block">To Main</span></div>
     <div class="menu"><span id="btn-menu" class="btn-menu appear">Menu</span></div>
   </div>
 
