--- a/Site/contact/confirmation.html
+++ b/Site/contact/confirmation.html
@@ -19,7 +19,7 @@
 <body class="page-contact">
 
   <div class="navbar appear">
-    <div class="brand"><span class="btn-brand link d-sm-none">LM</span><span class="btn-brand link d-none d-sm-block">Léo Mouraire</span></div>
+    <div class="brand"><span class="btn-brand link d-sm-none">To Main</span><span class="btn-brand link d-none d-sm-block">To Main</span></div>
     <div class="menu"><span id="btn-menu" class="btn-menu appear">Menu</span></div>
   </div>
 
