--- a/Site/about/index.html
+++ b/Site/about/index.html
@@ -29,7 +29,7 @@
 
         <div class="move-up-container">
           <div class="hello move-up-slow">
-            Hi! I'm glad to see you here!!
+            Hi!  I'm glad see you here!!
           </div>
         </div>
         <div class="move-up-container">
