--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
 <body style="background-color:rgb(100,100,100)">
   <div class="cont">
     <h1>PM-Kirill Bio</h1>
-    <span><a href="">Site</a></span>
-    <span><a href="">Discord</a></span>
-    <span><a href="">Telegram</a></span>
-    <span><a href="">Email</a></span>
+    <span><a href="http://pm-site.root.sx/Site/">Site</a></span>
+    <span><a href="https://discordapp.com/users/1081189420780240917/">Discord</a></span>
+    <span><a href="https://t.me/Kirill2546">Telegram</a></span>
+    <span><a href="pm.mail.kirill2546@gmail.com">Email</a></span>
   </div>
 
   <script>
